--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <div class="input-group">
                                 <input type="text" id="txtTaskName" class="form-control">
                                 <button type="submit" class="btn btn-primary" id="btnAddNewTask">
-                                    Ekle
+                                    Add
                                 </button>
                             </div>
                         </form>
@@ -33,11 +33,11 @@
                 <div class="card mt-3">
                     <div class="card-header controls">
                         <div class="filters">
-                            <span class="active" id="all">Hepsi</span>
-                            <span id="pending">Yapılacaklar</span>
-                            <span id="completed">Tamamlananlar</span>
+                            <span class="active" id="all">All</span>
+                            <span id="pending">Incomplete</span>
+                            <span id="completed">Completed</span>
                         </div>
-                        <button id="btnClear" class="btn btn-danger btn-sm float-end">Temizle</button>
+                        <button id="btnClear" class="btn btn-danger btn-sm float-end">Clean</button>
                     </div>
                     <ul id="task-list" class="list-group list-group-flush">
                     </ul>
